# qml-niri

./: .gitignore  CMakeLists.txt
src/: ipcclient.cpp  niri.cpp  niri.h  windowmodel.cpp  windowmodel.h  workspacemodel.cpp  workspacemodel.h
